# spectrayan-justice

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pom.xml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation_improvement.md  feature_request.md
.github/workflows/: ci.yml  stale.yml
justice-system-ai/: .gitignore  README.md  pyproject.toml
justice-system-ai/data/json/: -0___jonew__judis__123.jsonl  all_cases.jsonl  all_cases_fixed.jsonl  test_default.jsonl  test_mappings.jsonl
justice-system-ai/examples/: analyze_case.py  judicial_system_test.py  pdf_converter_example.py  test_all_pdfs.py  test_default_converter.py  test_field_mappings.py  test_parser_fix.py  test_verdict_extraction.py  text_correction_example.py
justice-system-ai/examples/data/json/: -0___jonew__judis__123.jsonl  all_cases.jsonl  custom_cases.jsonl
justice-system-ai/src/config/: AgentConfig.py  __init__.py  pdf_converter_config.py  settings.py
justice-system-ai/src/docs/: Address.md  Bailiff.md  BaseModel.md  BigFiveTraits.md  BloodType.md  Case.md  Clerk.md  CommunicationStyle.md  ConflictResolutionStyle.md  Court.md  CourtType.md  CustodyRecord.md  CustodyStatus.md  Defendant.md  Disability.md  EmotionalIntelligence.md  Evidence.md  EvidenceAllOfDigitalProperties.md  EvidenceAllOfDocumentaryProperties.md  EvidenceAllOfForensicProperties.md  EvidenceAllOfPhysicalProperties.md  EvidenceType.md  EyeColor.md  Gender.md  HairColor.md  Identity.md  Judge.md  JudgeBase.md  Juror.md  Jury.md  Lawyer.md  LeadershipStyle.md  Person.md  Personality.md  PersonalityType.md  Phone.md  PhysicalCondition.md  PhysicalTraits.md  Plaintiff.md  PlaintiffType.md  (+12 more)
justice-system-ai/src/justice_system/: __init__.py  cli.py
justice-system-ai/src/justice_system/agent/: agent.py
justice-system-ai/src/justice_system/agent/subagents/: __init__.py
justice-system-ai/src/justice_system/agent/subagents/jury/: jury.py
justice-system-ai/src/justice_system/agent/subagents/lawyers/: __init__.py  lawyers.py
justice-system-ai/src/justice_system/judicial/: __init__.py  agent.py  case_analysis.py  prompt.py
justice-system-ai/src/justice_system/judicial/subagents/: __init__.py
justice-system-ai/src/justice_system/judicial/subagents/jury/: __init__.py  jury.py  prompt.py
justice-system-ai/src/justice_system/judicial/subagents/lawyers/: lawyers.py  prompt.py
justice-system-ai/src/utils/: __init__.py  logging.py
justice-system-ai/src/utils/pdf2json/: README.md  __init__.py  json_converter.py  jsonl_writer.py  pdf_converter.py  pdf_parser.py  pdf_reader.py  text_corrector.py
justice-system-ai/tests/: __init__.py  test_case_analysis.py  test_cli.py  test_pdf_converter.py
justice-system-ai/tests/data/: sample_case.txt
justice-system-openapi/: README.md  pom.xml
justice-system-openapi/src/main/resources/: justice-system-v1.yaml
justice-system-openapi/src/main/resources/config/: backend-server.yaml  frontend-models.yaml  frontend.yaml  python-models.yaml
justice-system-web/: .gitignore  README.md  angular.json  package-lock.json  package.json
justice-system-web/src/: index.html
justice-system-web/src/app/: app.component.spec.ts  app.component.ts  app.routes.ts
justice-system-web/src/app/shared/: shared.module.ts
justice-system-web/src/assets/data/: cases.json  evidences.json  jurors.json  lawyers.json
(+141 files in other folders)
