[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "justice_system"
version = "0.1.0"
description = "Justice System AI"
authors = [
    {name = "Spectrayan Justice Team"}
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastmcp>=2.3.3",
    "google-adk>=0.5.0",
    "llama-index>=0.10.0",
    "llama-index-core>=0.12.35",
    "llama-index-llms-ollama>=0.5.4",
    "loguru>=0.7.3",
    "ollama>=0.1.5",
    "pymupdf>=1.25.5",
    "pytest>=8.3.5",
    "setuptools>=80.4.0",
]

[project.scripts]
justice-system = "justice_system.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages]
find = {where = ["src"], include = ["justice_system*", "generated*"]}


[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
